@@ -1,5 +1,10 @@
 2005-05-18  Carl Worth  <cworth@cworth.org>
 
+	* src/icimage.c (pixman_image_destroy): Clear pointers to NULL
+	after destroying/freeing them.
+
+2005-05-18  Carl Worth  <cworth@cworth.org>
+	
 	* src/pixman.h: Declare pixman_fixed16_16_t properly as int32_t
 	rather than just int. Reported by Lance Fetters.
 
